Fix T63359: no render preview when save buffers is on